--- a/erpnext_nextcloud/erpnext_nextcloud/doctype/nextcloud_settings/nextcloud_settings.json
+++ b/erpnext_nextcloud/erpnext_nextcloud/doctype/nextcloud_settings/nextcloud_settings.json
@@ -1,7 +1,7 @@
 {
  "actions": [
   {
-   "action": "erpnext_nextcloud.erpnext_nextcloud.doctype.nextcloud_settings.actions.sync_all",
+   "action": "erpnext_nextcloud.erpnext_nextcloud.doctype.nextcloud_settings.actions.sync",
    "action_type": "Server Action",
    "group": "Nextcloud",
    "label": "Sync"
@@ -13,16 +13,22 @@
    "label": "Discover"
   },
   {
+   "action": "erpnext_nextcloud.erpnext_nextcloud.doctype.nextcloud_settings.actions.force_delete",
+   "action_type": "Server Action",
+   "group": "Nextcloud",
+   "label": "Force Delete"
+  },
+  {
    "action": "erpnext_nextcloud.erpnext_nextcloud.doctype.nextcloud_settings.actions.create_vcards",
    "action_type": "Server Action",
    "group": "Cards",
    "label": "Create vCards"
   },
   {
-   "action": "erpnext_nextcloud.erpnext_nextcloud.doctype.nextcloud_settings.actions.delete_local_vcards",
+   "action": "erpnext_nextcloud.erpnext_nextcloud.doctype.nextcloud_settings.actions.delete_vcards",
    "action_type": "Server Action",
    "group": "Cards",
-   "label": "Delete Local vCards"
+   "label": "Delete vCards"
   },
   {
    "action": "erpnext_nextcloud.erpnext_nextcloud.doctype.nextcloud_settings.actions.create_config_file",
@@ -98,7 +104,7 @@
  "index_web_pages_for_search": 1,
  "issingle": 1,
  "links": [],
- "modified": "2021-09-09 10:53:37.838455",
+ "modified": "2021-09-09 17:21:43.787967",
  "modified_by": "Administrator",
  "module": "ERPNext Nextcloud",
  "name": "Nextcloud Settings",
